--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "ol": "^9.2.4",
     "proj4": "^2.11.0",
     "react": "^18.3.1",
